--- a/vitrine.html
+++ b/vitrine.html
@@ -17,6 +17,9 @@
     </head>
     <body>
         <!---<img src="images/logo.png" alt="logo" id="imglogo" width=150 height=110>-->
+        <!--
+        	Teste do git !
+        -->
         <div class="container">
             <div class="jumbotron style="margin-bottom:0">
                 <h3>O jeito leve de se vestir</h3>
