--- a/vitrine.html
+++ b/vitrine.html
@@ -21,15 +21,16 @@
             <div class="jumbotron style="margin-bottom:0">
                 <h3>O jeito leve de se vestir</h3>
             </div>
-            <nav class="navbar navbar-expand-sm bg-light navbar-light">
+            <nav class="navbar navbar-expand-sm|-md|-lg|-xl bg-light navbar-light">
                 <!-- Brand -->
-                <a class="navbar-brand" href="#">SoftWave</a>
+                <img src="images/logo.png" alt="logo" id="imglogo" width="100">
+                <!--<a class="navbar-brand" href="#">SoftWave</a>-->
 
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
-                <div class="collapse navbar-collapse" id="navbarSite"></div>
+                <div class="collapse navbar-collapse collapse" id="navbarSite"></div>
                     <!-- Links -->
                     <ul class="navbar-nav">
                         <li class="nav-item">
