--- a/vitrine.html
+++ b/vitrine.html
@@ -7,38 +7,45 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/estilo.css" />
+        <link rel="stylesheet" href="css/estilo.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
     </head>
-    <body>
-        <!---<img src="images/logo.png" alt="logo" id="imglogo" width=150 height=110>-->
-        <!--
-        	Teste do git !
-        -->
-        <div class="container">
-            <div class="jumbotron style="margin-bottom:0">
-                <h3>O jeito leve de se vestir</h3>
-            </div>
-            <nav class="navbar navbar-expand-sm|-md|-lg|-xl bg-light navbar-light">
-                <!-- Brand -->
-                <img src="images/logo.png" alt="logo" id="imglogo" width="100">
-                <!--<a class="navbar-brand" href="#">SoftWave</a>-->
 
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
-                    <span class="navbar-toggler-icon"></span>
+    <body>
+        <div class="container">
+            <nav class="nav navbar navbar-light bg-light">
+                <a class="navbar-brand">
+                    <!-- Logo -->
+                    <img src="images/logo.png" id="imglogotopo" width="80">
+                </a>
+                <ul class="nav navbar ">
+                    <li class="navbar-item">
+                        <a href="/login">Login |</a>
+                    </li>
+                    <li class="navbar-item">
+                        <button class="btn btn-light" type="button" >
+                            <img src="images/24px.svg" alt="carrinho" id="imgcarrinho" width="30">
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <!--botão collapse-->
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarSite">
+                    <span class="navbar-toggler-icon "></span>
                 </button>
 
-                <div class="collapse navbar-collapse collapse" id="navbarSite"></div>
-                    <!-- Links -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Sobre.html">Home</a>
+                <!--Menu-->
+                <div class="collapse navbar-collapse" id="navbarSite">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="navbar-item">
+                            <a class="nav-link" href="vitrine.html">Home</a>
                         </li>
+
                         <!-- Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -60,9 +67,9 @@
                             <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
-                    <div class="search-container">
+                    <div class="search-container my-2 my-lg-0">
                         <form action="/action_page.php">
-                            <input type="text" placeholder="Procurar..." name="search">
+                            <input type="search" placeholder="Procurar..." name="search">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
@@ -71,7 +78,7 @@
             <!-- produtos -->
             <section id="gallery">
                 <div class="container">
-                    <div class="row news-grids pb-lg-5 mt-3 text-center">
+                    <div class="row news-grids pb-lg-5 text-center">
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
                             <a href="#gal1"><img src="images/sacada-roupas-femininas-inverno.png" alt="High Edu" class="img-fluid"></a>
                         </div>
@@ -96,38 +103,39 @@
             <!--//produtos-->
         </div>
         <div class="container">
+            <!-- //footer -->
             <footer>
-        <section class="footer footer_1its py-5">
-            <div class="container py-md-4">
-                <div class="row footer-top mb-md-5 mb-4">
-                    <div class="col-lg-4 col-md-6 footer-grid_section_1its">
-                        <div class="footer-title-w3ls">
-                            <h3>Endereço</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p>Endereço : Oscar Freire, 1000, São Paulo - SP</p>
-                            <p>Telefone : 11 5348-9436</p>
-                            <p>Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                <section class="footer footer_1its py-5">
+                    <div class="container py-md-4">
+                        <div class="row footer-top mb-md-5 mb-4">
+                            <div class="col-lg-4 col-md-6 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Endereço</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p>Endereço : Oscar Freire, 1000, São Paulo - SP</p>
+                                    <p>Telefone : 11 5348-9436</p>
+                                    <p>Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Últimas Notícias</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
+                                    <form action="#" method="post">
+                                        <input type="email" name="Email" placeholder="Enter your email..." required="">
+                                        <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                        <div class="clearfix"> </div>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
-                        <div class="footer-title-w3ls">
-                            <h3>Últimas Notícias</h3>
-                        </div>
-                        <div class="footer-text">
-                            <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
-                            <form action="#" method="post">
-                                <input type="email" name="Email" placeholder="Enter your email..." required="">
-                                <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
-                                <div class="clearfix"> </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-    </footer>
-    <!-- //footer -->
+                </section>
+            </footer>
+            <!-- //footer -->
         </div>  
     </body>
 </html>
