--- a/vitrine.html
+++ b/vitrine.html
@@ -76,26 +76,62 @@
                 </div>
             </nav>
             <!-- produtos -->
-            <section id="gallery">
+            <section id="galeria">
                 <div class="container">
                     <div class="row news-grids pb-lg-5 text-center">
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal1"><img src="images/sacada-roupas-femininas-inverno.png" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/sacada-roupas-femininas-inverno.png" alt="High Edu" class="img-fluid" title="Blusa de lã - Cinza e Preta Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                            	<a class="botaocomprar" title="Blusa de lã - Cinza e Preta Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Blusa de lã - Cinza e Preta Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal2"><img src="images/blusa-de-la-vermelha.png" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/blusa-de-la-vermelha.png" alt="High Edu" class="img-fluid" title="Blusa de Malha - Vermelha Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                                <a class="botaocomprar" title="Blusa de Malha - Vermelha Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Blusa de Malha - Vermelha Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal3"><img src="images/blusa-furada-azul.png" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/blusa-furada-azul.png" alt="High Edu" class="img-fluid" title="Regatinha Furinhos- Azul Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                                <a class="botaocomprar" title="Regatinha Furinhos- Azul Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Regatinha Furinhos- Azul Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal4"><img src="images/calca-estampada-preta.png" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/calca-estampada-preta.png" alt="High Edu" class="img-fluid" title="Calça estampada Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                                <a class="botaocomprar" title="Calça estampada Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Calça estampada Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal5"><img src="images/conjunto-bege.png"" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/conjunto-bege.png"" alt="High Edu" class="img-fluid" title="Shorts Alfaiataria - Caqui Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                                <a class="botaocomprar" title="Shorts Alfaiataria - Caqui Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Shorts Alfaiataria - Caqui Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
-                            <a href="#gal6"><img src="images/macacao-preto.png" alt="High Edu" class="img-fluid"></a>
+                            <a href="produto-detalhe.html"><img src="images/macacao-preto.png" alt="High Edu" class="img-fluid" title="Macacão estampado - Preto Softwave"></a>
+                            <div class="informacoes bg-light py-2 " >
+                                <a class="botaocomprar" title="Macacão estampado - Preto Softwave" href="produto-detalhe.html">
+                                    <p class="produto ">Macacão estampado - Preto Softwave</p>   
+                                </a>
+                                <h5>R$ 100.00</h5>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -104,7 +140,7 @@
         </div>
         <div class="container">
             <!-- //footer -->
-            <footer>
+            <footer class="bg-light">
                 <section class="footer footer_1its py-5">
                     <div class="container py-md-4">
                         <div class="row footer-top mb-md-5 mb-4">
