Atualicacao botao comprar

--- a/vitrine.html
+++ b/vitrine.html
@@ -81,11 +81,14 @@
                     <div class="row news-grids pb-lg-5 text-center">
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
                             <a href="produto-detalhe.html"><img src="images/sacada-roupas-femininas-inverno.png" alt="High Edu" class="img-fluid" title="Blusa de lã - Cinza e Preta Softwave"></a>
-                            <div class="informacoes bg-light py-2 " >
+                            <div class="informacoes py-2 " >
                             	<a class="botaocomprar" title="Blusa de lã - Cinza e Preta Softwave" href="produto-detalhe.html">
-                                    <p class="produto ">Blusa de lã - Cinza e Preta Softwave</p>   
+                                    <p class="produto">Blusa de lã - Cinza e Preta Softwave</p>
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
@@ -94,7 +97,10 @@
                                 <a class="botaocomprar" title="Blusa de Malha - Vermelha Softwave" href="produto-detalhe.html">
                                     <p class="produto ">Blusa de Malha - Vermelha Softwave</p>   
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
@@ -103,7 +109,10 @@
                                 <a class="botaocomprar" title="Regatinha Furinhos- Azul Softwave" href="produto-detalhe.html">
                                     <p class="produto ">Regatinha Furinhos- Azul Softwave</p>   
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
@@ -112,7 +121,10 @@
                                 <a class="botaocomprar" title="Calça estampada Softwave" href="produto-detalhe.html">
                                     <p class="produto ">Calça estampada Softwave</p>   
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
@@ -121,7 +133,10 @@
                                 <a class="botaocomprar" title="Shorts Alfaiataria - Caqui Softwave" href="produto-detalhe.html">
                                     <p class="produto ">Shorts Alfaiataria - Caqui Softwave</p>   
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                         <div class="py-2 col-sm-12 col-md-4 col-lg-4 col-xs-12 gal-img mt-lg-4">
@@ -130,7 +145,10 @@
                                 <a class="botaocomprar" title="Macacão estampado - Preto Softwave" href="produto-detalhe.html">
                                     <p class="produto ">Macacão estampado - Preto Softwave</p>   
                                 </a>
-                                <h5>R$ 100.00</h5>
+                                <div class="d-flex justify-content-center"> 
+                                    <h5 class="d-inline pr-4">R$ 100.00</h5>  
+                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -161,9 +179,8 @@
                                 <div class="footer-text">
                                     <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
                                     <form action="#" method="post">
-                                        <input type="email" name="Email" placeholder="Enter your email..." required="">
+                                        <input type="email" name="Email" placeholder="Cadastre seu email..." required="" size="35">
                                         <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
-                                        <div class="clearfix"> </div>
                                     </form>
                                 </div>
                             </div>
