Inserida pagina cesta

--- a/vitrine.html
+++ b/vitrine.html
@@ -28,7 +28,9 @@
                     </li>
                     <li class="navbar-item">
                         <button class="btn btn-light" type="button" >
-                            <img src="images/24px.svg" alt="carrinho" id="imgcarrinho" width="30">
+                            <a href="cesta.html">
+                                <img src="images/24px.svg" id="imgcarrinho" width="30">
+                            </a>
                         </button>
                     </li>
                 </ul>
@@ -119,7 +121,7 @@
                             <a href="produto-detalhe.html"><img src="images/calca-estampada-preta.png" alt="High Edu" class="img-fluid" title="Calça estampada Softwave"></a>
                             <div class="informacoes bg-light py-2 " >
                                 <a class="botaocomprar" title="Calça estampada Softwave" href="produto-detalhe.html">
-                                    <p class="produto ">Calça estampada Softwave</p>   
+                                    <p class="produto ">Calça alta estampada Softwave</p>   
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
@@ -167,9 +169,9 @@
                                     <h3>Endereço</h3>
                                 </div>
                                 <div class="footer-text">
-                                    <p>Endereço : Oscar Freire, 1000, São Paulo - SP</p>
-                                    <p>Telefone : 11 5348-9436</p>
-                                    <p>Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
+                                    <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
+                                    <p class="m-0">Telefone : 11 5348-9436</p>
+                                    <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
@@ -179,7 +181,7 @@
                                 <div class="footer-text">
                                     <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
                                     <form action="#" method="post">
-                                        <input type="email" name="Email" placeholder="Cadastre seu email..." required="" size="35">
+                                        <input type="email" name="Email" placeholder="Cadastre seu email..." required="" >
                                         <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
                                     </form>
                                 </div>
