Compatibilizacao pagina produto

--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -8,36 +8,47 @@
         
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/produto.css" />
+        <link rel="stylesheet" href="css/estilo.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
- 
-
-        
 
     </head>
     <body>
         <div class="container">
-            <div class="jumbotron style="margin-bottom:0">
-                <h3>O jeito leve de se vestir</h3>
-            </div>
-            <nav class="navbar navbar-expand-sm|-md|-lg|-xl bg-light navbar-light">
-                <!-- Brand -->
-                <img src="images/logo.png" alt="logo" id="imglogo" width="100">
-                <!-- <a class="navbar-brand" href="#">SoftWave</a> -->
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSite">
-                    <span class="navbar-toggler-icon"></span>
+            <nav class="nav navbar navbar-light bg-light">
+                <a class="navbar-brand" href="vitrine.html">
+                    <!-- Logo -->
+                    <img src="images/logo.png" id="imglogotopo" width="80">
+                </a>
+                <ul class="nav navbar ">
+                    <li class="navbar-item">
+                        <a href="/login">Login |</a>
+                    </li>
+                    <li class="navbar-item">
+                        <button class="btn btn-light" type="button" >
+                            <a href="cesta.html">
+                                <img src="images/24px.svg" id="imgcarrinho" width="30">
+                            </a>
+                        </button>
+                    </li>
+                </ul>
+            </nav>
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <!--botão collapse-->
+                <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#navbarSite">
+                    <span class="navbar-toggler-icon "></span>
                 </button>
 
-                <div class="collapse navbar-collapse collapse" id="navbarSite"></div>
-                    <!-- Links -->
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" href="Sobre.html">Home</a>
+                <!--Menu-->
+                <div class="collapse navbar-collapse" id="navbarSite">
+                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                        <li class="navbar-item">
+                            <a class="nav-link" href="vitrine.html">Home</a>
                         </li>
+
                         <!-- Dropdown -->
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
@@ -59,9 +70,9 @@
                             <a class="nav-link" href="contato.html">Contato</a>
                         </li>
                     </ul>
-                    <div class="search-container">
+                    <div class="search-container my-2 my-lg-0">
                         <form action="/action_page.php">
-                            <input type="text" placeholder="Procurar..." name="search">
+                            <input type="search" placeholder="Procurar..." name="search">
                             <button type="submit"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
