criacao cadastro modal

--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
                 <aside class="col-sm-4">
                     <div class="card">
                         <article class="card-body">
-                            <a href="cadastro.html" class="float-right btn btn-outline-dark" data-toggle="modal" data-target="#Cadastro">Inscrever-se</a>
+                            <a href="cadastro.html" class="float-right btn btn-outline-dark" data-toggle="modal" data-target="#Cadastro">Não tenho cadastro</a>
                             <h4 class="card-title mb-4 mt-1">Fazer Login</h4>
                             <form>
                                 <div class="form-group">
