--- a/cesta.html
+++ b/cesta.html
@@ -24,7 +24,7 @@
                 </a>
                 <ul class="nav navbar ">
                     <li class="navbar-item">
-                        <a href="/login">Login |</a>
+                        <a href="login.html">Login |</a>
                     </li>
                     <li class="navbar-item">
                         <button class="btn btn-light" type="button" >
@@ -98,7 +98,7 @@
                             <td class="produto ">Blusa Azul</td>
                             <td class="preco-item">R$ 100.00</td>
                             <td class="quantidade-item">1</td>
-                            <td class="valor-total">R$ 200.00</td>
+                            <td class="valor-total">R$ 100.00</td>
                         </tbody>
                 </table>
             </div>
