--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -25,7 +25,7 @@
                 </a>
                 <ul class="nav navbar ">
                     <li class="navbar-item">
-                        <a href="/login">Login |</a>
+                        <a href="login.html">Login |</a>
                     </li>
                     <li class="navbar-item">
                         <button class="btn btn-light" type="button" >
@@ -124,7 +124,7 @@
                                               <input type="number" class="form-control" id="quantity_input" value="1" size="10">
                                             </div>
                                         </div>
-                                        <button class="btn btn-info">Comprar</button>
+                                        <button class="btn btn-outline-dark">Comprar</button>
                                     </div>
                                     <div class="details_share">
                                         <span>Compartilhe:</span>
