Revisão formataçao login

--- a/cesta.html
+++ b/cesta.html
@@ -52,12 +52,12 @@
                                 Produtos
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Blusas</a>
-                                <a class="dropdown-item" href="#">Calças</a>
-                                <a class="dropdown-item" href="#">Vestidos</a>
-                                <a class="dropdown-item" href="#">Saias</a>
-                                <a class="dropdown-item" href="#">Shorts</a>
-                                <a class="dropdown-item" href="#">Acessórios</a>
+                                <a class="dropdown-item" href="vitrine.html">Blusas</a>
+                                <a class="dropdown-item" href="vitrine.html">Calças</a>
+                                <a class="dropdown-item" href="vitrine.html">Vestidos</a>
+                                <a class="dropdown-item" href="vitrine.html">Saias</a>
+                                <a class="dropdown-item" href="vitrine.html">Shorts</a>
+                                <a class="dropdown-item" href="vitrine.html">Acessórios</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -102,24 +102,34 @@
                         </tbody>
                 </table>
             </div>
-            <div class="cart resume col-md-4 justi">
-                <table>
-                    <tbody>
-                        <td class="subtotal ">Subtotal</td>
-                        <td class="subtotal ">R$ 300.00</td>
-                    </tbody>
-                    <tbody><td class="espaço "></td></tbody>
-                    <tbody>
-                        <td class="subtotal ">Entrega</td>
-                        <td class="subtotal ">R$ 20.00</td>
-                    </tbody>
-                    <tbody><td class="espaço "></td></tbody>
-                    <tbody>
-                    <tbody>
-                        <td class="subtotal ">Total</td>
-                        <td class="subtotal ">R$ 320.00</td>
-                    </tbody>
-                </table>
+            <div class="d-flex flex-row bd-highlight mb-3">
+                <div class="cart resume col-md-4">
+                    <table>
+                        <tbody>
+                            <td class="subtotal py-2">Subtotal</td>
+                            <td class="subtotal ">R$ 300.00</td>
+                        </tbody>
+                        <tbody><td class="espaço "></td></tbody>
+                        <tbody>
+                            <td class="subtotal py-2">Entrega</td>
+                            <td class="subtotal ">R$ 20.00</td>
+                        </tbody>
+                        <tbody><td class="espaço "></td></tbody>
+                        <tbody>
+                        <tbody>
+                            <td class="subtotal py-2">Total</td>
+                            <td class="subtotal ">R$ 320.00</td>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="text-center py-2">
+                    <div class="form-group ml-4">
+                        <a class="btn btn-dark d-flex" href="vitrine.html" role="button"> Continuar Comprando </a>
+                    </div>
+                    <div class="form-group ml-4">
+                        <button type="submit" class="btn btn-dark"> Finalizar Compras </button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="container">
