--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -55,12 +55,12 @@
                                 Produtos
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Blusas</a>
-                                <a class="dropdown-item" href="#">Calças</a>
-                                <a class="dropdown-item" href="#">Vestidos</a>
-                                <a class="dropdown-item" href="#">Saias</a>
-                                <a class="dropdown-item" href="#">Shorts</a>
-                                <a class="dropdown-item" href="#">Acessórios</a>
+                                <a class="dropdown-item" href="vitrine.html">Blusas</a>
+                                <a class="dropdown-item" href="vitrine.html">Calças</a>
+                                <a class="dropdown-item" href="vitrine.html">Vestidos</a>
+                                <a class="dropdown-item" href="vitrine.html">Saias</a>
+                                <a class="dropdown-item" href="vitrine.html">Shorts</a>
+                                <a class="dropdown-item" href="vitrine.html">Acessórios</a>
                             </div>
                         </li>
                         <li class="nav-item">
