--- a/login.html
+++ b/login.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="stylesheet" href="css/estilo.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
@@ -18,7 +19,7 @@
 <body>
     <div class="container">
         <nav class="nav navbar navbar-light bg-light">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href="vitrine.html">
                 <!-- Logo -->
                 <img src="images/logo.png" id="imglogotopo" width="80">
             </a>
@@ -54,12 +55,12 @@
                                 Produtos
                             </a>
                         <div class="dropdown-menu">
-                            <a class="dropdown-item" href="#">Blusas</a>
-                            <a class="dropdown-item" href="#">Calças</a>
-                            <a class="dropdown-item" href="#">Vestidos</a>
-                            <a class="dropdown-item" href="#">Saias</a>
-                            <a class="dropdown-item" href="#">Shorts</a>
-                            <a class="dropdown-item" href="#">Acessórios</a>
+                            <a class="dropdown-item" href="vitrine.html">Blusas</a>
+                            <a class="dropdown-item" href="vitrine.html">Calças</a>
+                            <a class="dropdown-item" href="vitrine.html">Vestidos</a>
+                            <a class="dropdown-item" href="vitrine.html">Saias</a>
+                            <a class="dropdown-item" href="vitrine.html">Shorts</a>
+                            <a class="dropdown-item" href="vitrine.html">Acessórios</a>
                         </div>
                     </li>
                     <li class="nav-item">
@@ -81,8 +82,8 @@
         <!-- Login -->
 
         <div class="container">
-            <div class="row">
-                <aside class="col-sm-5">
+            <div class="row d-flex justify-content-center bg-light">
+                <aside class="col-sm-5 mt-4 mb-4">
                     <div class="card">
                         <article class="card-body">
                             <a href="cadastro.html" class="float-right btn btn-outline-dark" data-toggle="modal" data-target="#Cadastro">Não tenho cadastro</a>
@@ -190,43 +191,44 @@
                             </div>
                         </div>
                     </div>
-
-                    <!--//produtos-->
+                </aside>
             </div>
-            <div class="container">
-                <!-- //footer -->
-                <footer class="bg-light">
-                    <section class="footer footer_1its py-5">
-                        <div class="container py-md-4">
-                            <div class="row footer-top mb-md-5 mb-4">
-                                <div class="col-lg-4 col-md-6 footer-grid_section_1its">
-                                    <div class="footer-title-w3ls">
-                                        <h3>Endereço</h3>
-                                    </div>
-                                    <div class="footer-text">
-                                        <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
-                                        <p class="m-0">Telefone : 11 5348-9436</p>
-                                        <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
-                                    </div>
-                                </div>
-                                <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
-                                    <div class="footer-title-w3ls">
-                                        <h3>Últimas Notícias</h3>
-                                    </div>
-                                    <div class="footer-text">
-                                        <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
-                                        <form action="#" method="post">
-                                            <input type="email" name="Email" placeholder="Cadastre seu email..." required="">
-                                            <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
-                                        </form>
-                                    </div>
-                                </div>
+        </div>
+        <div class="container">
+        <!-- //footer -->
+        <footer class="footer">
+            <section class="footer footer_1its py-5">
+                <div class="container py-md-4">
+                    <div class="row footer-top mb-md-5 mb-4">
+                        <div class="col-lg-4 col-md-6 footer-grid_section_1its">
+                            <div class="footer-title-w3ls">
+                                <h3>Endereço</h3>
+                            </div>
+                            <div class="footer-text">
+                                <p class="m-0">Endereço : Oscar Freire, 1000, São Paulo - SP</p>
+                                <p class="m-0">Telefone : 11 5348-9436</p>
+                                <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
                             </div>
                         </div>
-                    </section>
-                </footer>
-                <!-- //footer -->
-            </div>
+                        <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                            <div class="footer-title-w3ls">
+                                <h3>Últimas Notícias</h3>
+                            </div>
+                            <div class="footer-text">
+                                <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
+                                <form action="#" method="post">
+                                    <input type="email" name="Email" placeholder="Cadastre seu email..." required="" >
+                                    <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </footer>
+        <!-- //footer -->
+    </div>  
+    </div>
 </body>
 
 </html>
