--- a/vitrine.html
+++ b/vitrine.html
@@ -54,12 +54,12 @@
                                 Produtos
                             </a>
                             <div class="dropdown-menu">
-                                <a class="dropdown-item" href="#">Blusas</a>
-                                <a class="dropdown-item" href="#">Calças</a>
-                                <a class="dropdown-item" href="#">Vestidos</a>
-                                <a class="dropdown-item" href="#">Saias</a>
-                                <a class="dropdown-item" href="#">Shorts</a>
-                                <a class="dropdown-item" href="#">Acessórios</a>
+                                <a class="dropdown-item" href="vitrine.html">Blusas</a>
+                                <a class="dropdown-item" href="vitrine.html">Calças</a>
+                                <a class="dropdown-item" href="vitrine.html">Vestidos</a>
+                                <a class="dropdown-item" href="vitrine.html">Saias</a>
+                                <a class="dropdown-item" href="vitrine.html">Shorts</a>
+                                <a class="dropdown-item" href="vitrine.html">Acessórios</a>
                             </div>
                         </li>
                         <li class="nav-item">
@@ -89,7 +89,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
@@ -101,7 +101,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
@@ -125,7 +125,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
@@ -137,7 +137,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
@@ -149,7 +149,7 @@
                                 </a>
                                 <div class="d-flex justify-content-center"> 
                                     <h5 class="d-inline pr-4">R$ 100.00</h5>  
-                                    <button type="button" class="d-inline btn btn-outline-dark btn-sm" href="cesta.html">Comprar</button>
+                                    <a class="d-inline btn btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                 </div>
                             </div>
                         </div>
