centralizacao esqueci senha

--- a/esqueci.html
+++ b/esqueci.html
@@ -82,8 +82,8 @@
         <!-- Esqueci minha senha -->
 
         <div class="container">
-            <div class="row">
-                <aside class="col-sm-4">
+            <div class="row d-flex justify-content-center bg-light">
+                <aside class="col-sm-5 mt-4 mb-4">
                     <div class="card">
                         <article class="card-body">
                               <form>
