--- a/login.html
+++ b/login.html
@@ -196,7 +196,7 @@
         </div>
         <div class="container">
         <!-- //footer -->
-        <footer class="footer">
+        <footer class="bg-light">
             <section class="footer footer_1its py-5">
                 <div class="container py-md-4">
                     <div class="row footer-top mb-md-5 mb-4">
