--- a/cesta.html
+++ b/cesta.html
@@ -133,8 +133,7 @@
             </div>
         </div>
         <div class="container">
-            <!-- //footer -->
-            <footer class="bg-light">
+        <footer>
                 <section class="footer footer_1its py-5">
                     <div class="container py-md-4">
                         <div class="row footer-top mb-md-5 mb-4">
@@ -148,11 +147,23 @@
                                     <p class="m-0">Email : <a href="mailto:softwave@softwave.com">softwave@softwave.com</a></p>
                                 </div>
                             </div>
+                            <div class="col-lg-4 col-md-12 mt-lg-0 mt-4 col-sm-12 footer-grid_section_1its">
+                                <div class="footer-title-w3ls">
+                                    <h3>Últimas Notícias</h3>
+                                </div>
+                                <div class="footer-text">
+                                    <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
+                                    <form action="#" method="post">
+                                        <input type="email" name="Email" placeholder="Cadastre seu email..." required="" >
+                                        <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                    </form>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
             </footer>
             <!-- //footer -->
-        </div>  
+    </div>  
     </body>
 </html>
