--- a/login.html
+++ b/login.html
@@ -195,7 +195,7 @@
             </div>
         </div>
         <div class="container">
-        <footer class="bg-light">
+        <footer>
                 <section class="footer footer_1its py-5">
                     <div class="container py-md-4">
                         <div class="row footer-top mb-md-5 mb-4">
