atualizacao login.html

--- a/login.html
+++ b/login.html
@@ -95,7 +95,7 @@
                                 </div>
                                 <!-- form-group// -->
                                 <div class="form-group">
-                                    <a class="float-right" href="esqueci.html">Esqueci minha senha?</a>
+                                    <a class="float-right" href="esqueci.html">Esqueceu sua senha?</a>
                                     <label>Sua senha</label>
                                     <input class="form-control" placeholder="******" type="password" id="senha">
                                 </div>
@@ -103,13 +103,13 @@
                                 <div class="form-group">
                                     <div class="checkbox">
                                         <label>
-                                            <input type="checkbox"> Save password </label>
+                                            <input type="checkbox"> Salvar senha </label>
                                     </div>
                                     <!-- checkbox .// -->
                                 </div>
                                 <!-- form-group// -->
                                 <div class="form-group">
-                                    <button type="submit" class="btn btn-outline-dark btn-block" onclick="validar();"> Login </button>
+                                    <button type="submit" class="btn btn-outline-dark btn-block" onclick="validar();"> Entrar </button>
                                 </div>
                                 <!-- form-group// -->
                             </form>
