--- a/produto-busca.html
+++ b/produto-busca.html
@@ -18,7 +18,7 @@
 <body>
     <div class="container">
         <nav class="nav navbar navbar-light bg-light">
-            <a class="navbar-brand">
+            <a class="navbar-brand" href="vitrine.html">
                 <!-- Logo -->
                 <img src="images/logo.png" id="imglogotopo" width="80">
             </a>
