Mudanca nome do botao limpar cesta

--- a/cesta.html
+++ b/cesta.html
@@ -123,10 +123,10 @@
                     </table>
                 </div>
                 <div class="text-center py-2">
-                    <div class="form-group ml-4">
-                        <a class="btn btn-dark d-flex" href="vitrine.html" role="button"> Continuar Comprando </a>
+                    <div class="form-group ml-4 mt-2">
+                        <button type="submit" class="btn btn-dark" > Limpar Cesta </button>
                     </div>
-                    <div class="form-group ml-4">
+                    <div class="form-group ml-4 mt-2">
                         <button type="submit" class="btn btn-dark"> Finalizar Compras </button>
                     </div>
                 </div>
