alteração da cor botões ultimas noticias

--- a/login.html
+++ b/login.html
@@ -217,7 +217,7 @@
                                     <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
                                     <form action="#" method="post" class="form-inline">
                                         <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
-                                        <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                        <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
                                     </form>
                                 </div>
                             </div>
