--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -13,7 +13,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
     </head>
     <body>
         <div class="container">
@@ -163,7 +162,7 @@
                             <p> Inscreva-se para receber as ofertas especiais, toda semana uma promoção especial para você</p>
                             <form action="#" method="post" class="form-inline">
                                 <input class="form-control" type="email" name="Email" placeholder="Cadastre seu email..." required="" >
-                                <button class="btn1 btn"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
+                                <button class="btn btn-dark"><span class="fa fa-paper-plane-o" aria-hidden="true"></span></button>
                             </form>
                         </div>
                     </div>
