correcao de validacoes

--- a/esqueci.html
+++ b/esqueci.html
@@ -153,6 +153,8 @@
             alert("Informe um email válido");
             email.focus(); // foca no campo com id email
             return false;
+        }else{
+            alert("Uma nova senha foi enviada para seu email !!!");
         }
     }
 </script>
