atualizacao botao comprar

--- a/produto-detalhe.html
+++ b/produto-detalhe.html
@@ -122,7 +122,7 @@
                                               <input type="number" class="form-control" id="quantity_input" value="1" size="10">
                                             </div>
                                         </div>
-                                        <button class="btn btn-outline-dark"><a href="cesta.html">Comprar</a></button>
+                                        <a class="d-inline btn btn-light btn-outline-dark btn-sm" href="cesta.html" role="button">Comprar</a>
                                     </div>
                                     <div class="details_share">
                                         <span>Compartilhe:</span>
